objects/Token_Consumption__c.object
<CustomObject>
    <fields>
        <fullName>GU_Entitlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GU Entitlement</label>
        <referenceTo>GU_Entitlement__c</referenceTo>
        <relationshipLabel>Token Consumption</relationshipLabel>
        <relationshipName>Token_Consumption</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Token Consumption</relationshipLabel>
        <relationshipName>Token_Consumption</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Package_Services__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Package Services</label>
        <referenceTo>Package_Services__c</referenceTo>
        <relationshipLabel>Token Consumption</relationshipLabel>
        <relationshipName>Token_Consumption</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Token Consumption</relationshipLabel>
        <relationshipName>Token_Consumption</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Allocated</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Consumed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Token_Allocation__c</fullName>
        <label>Token Allocation</label>
        <referenceTo>Token_Allocations__c</referenceTo>
        <relationshipLabel>Token Consumption</relationshipLabel>
        <relationshipName>Token_Consumption</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tokens__c</fullName>
        <label>Tokens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>product_group_item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Group Item</label>
        <referenceTo>Product_Group_Item__c</referenceTo>
        <relationshipLabel>Token Consumption</relationshipLabel>
        <relationshipName>Token_Consumption</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Token Consumption</label>
    <nameField>
        <displayFormat>TC-{00000}</displayFormat>
        <label>Token Consumption Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Token Consumption</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>